# bpy_jupyter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE_header.txt  README.md  mkdocs.yml  pyproject.toml  scene.blend
blext/: cli.py  pack.py  paths.py  spec.py
blext/blender_python/: bl_init.py
bpy_jupyter/: __init__.py  preferences.py  registration.py  types.py
bpy_jupyter/contracts/: __init__.py  addon.py  bl_handlers.py  bl_keymap.py  icons.py  operator_types.py  panel_types.py
bpy_jupyter/operators/: __init__.py  copy_jupy_url_to_clip.py  copy_kern_conn_path_to_clip.py  copy_kern_info_to_clipboard.py  jupyter_kernel.py  start_jupyter_kernel.py  stop_jupyter_kernel.py
bpy_jupyter/panels/: __init__.py  jupyter_panel.py
bpy_jupyter/services/: __init__.py  async_event_loop.py  init_settings.py  jupyter_kernel.py  registration.py
bpy_jupyter/types/: __init__.py  addon.py  bl.py  icons.py  operator_types.py  panel_types.py
bpy_jupyter/utils/: __init__.py  ipykernel.py  logger.py  staticproperty.py
docs/: installation.md  n2data_simple.ipynb
docs/reference/: contributing.md
docs/reference/policies/: licensing.md  versioning.md
docs/reference/python_api/: bpy_jupyter.md  bpy_jupyter_operators.md  bpy_jupyter_panels.md  bpy_jupyter_services.md  bpy_jupyter_utils.md
docs/user_guides/: getting_started.md
scripts/: __init__.py  bl_init.py  info.py  pack.py
